--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "coerce",
-  "version": "0.1.0",
+  "name": "@dylan/coerce",
+  "version": "0.2.0",
   "description": "Change values on an object based on keywords or a key map.",
   "license": "MIT",
   "keywords": [
