--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "dot-prop": "5.1.1"
   },
   "devDependencies": {
-    "mocha": "4.1.0",
-    "chai": "4.1.2",
-    "chai-string": "1.5.0"
+    "mocha": "^10.0.0",
+    "chai": "^4.3.6",
+    "chai-string": "^1.5.0"
   }
 }
